--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
   "author": "NickKrsk <ggd43@rambler.ru>",
   "private": true,
   "scripts": {
-    "lint": "eslint --ext .js,.vue ./",
+    "lint": "eslint --fix --ext .js,.vue ./",
     "test": "echo \"No test specified\" && exit 0",
     "start": "quasar dev"
   },
