--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "core-js": "^3.6.5",
-    "quasar": "^1.0.0"
+    "pug": "^3.0.2",
+    "quasar": "^1.0.0",
+    "vue-carousel": "^0.18.0"
   },
   "devDependencies": {
     "@quasar/app": "^2.0.0",
